--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     border: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     scroll-behavior: smooth;
   }
 footer{
@@ -10,26 +10,24 @@ footer{
 }
 
 li{
-    font-size: larger;
+    font-size: 30px;
+    font-weight: 800px;
 }
-a{
-    font-size: larger;
+
+a, a:link, a:visited{
+    font-size: 30px;
+    font-weight: 800px;
     text-decoration: none;
-}
-a:link{
-    text-decoration: none;
-    color:  rgba(255, 255, 255, 0.733);
-}
-a:visited{
     text-decoration: none;
     color:  rgba(255, 255, 255, 0.733);
 }
+
 a:hover{
     font-weight: bold;
 }
 
 h2{
-    font-size: 40px;
+    font-size: 80px;
 }
 
 footer{
@@ -51,14 +49,14 @@ input{
 
 .hero{
     height: 700px;
-    background-image: url(imagens/thumb-churrasco-edit.jpg);
+    background: url(imagens/thumb-churrasco-edit.jpg);
     background-color: black;
 }
 
 .heroTitles h1{
     font-style: normal;  
     font-weight: 700;  
-    font-size: 46px;  
+    font-size: 80px;  
     line-height: 42px;  
     text-align: center;  
     letter-spacing: 0.2px;  
@@ -69,7 +67,7 @@ input{
 .heroTitles h2{
     font-style: normal;  
     font-weight: 700;  
-    font-size: 30px;  
+    font-size: 60px; 
     line-height: 30px;  
     text-align: center;  
     letter-spacing: 0.2px;  
@@ -130,6 +128,8 @@ input{
 
 .cardapio h2{
     margin-top: 50px;
+    font-size: 80px;
+    font-weight: bold;
 }
 
 .cardapioItens{
@@ -143,15 +143,25 @@ input{
 
 .cardapioItens li{
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
+}
+
+.main{
+    background: url(imagens/papel.jpeg);
+    background-size: cover;
 }
 
 #cardapioIntro{
-    background-image: url(imagens/papelMesa.jpeg);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+}
+
+#cardapioIntro h1{
+    font-size: 5pc;
+    font-weight: 900px;
+    margin-top: 50px;
 }
 
 #menuImg{
@@ -164,7 +174,6 @@ input{
 }
 
 #aboutUs{
-    background-color: beige;
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
@@ -172,10 +181,18 @@ input{
     height: 600px;
 }
 
+#aboutUs h2{
+    margin-top: 30px;
+    margin-left: 100px;
+    font-size: 80px;
+}
+
 #aboutUsImg{
     width: 600px;
     height: 470px;
     margin: 20px;
+    margin-right: 100px;
+    margin-left: 20px;
     border-radius: 15px;
     box-shadow: 10px 10px 8px #888888
 }
@@ -188,11 +205,11 @@ input{
 }
 
 #aboutUs>article>p{
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: 600;
     letter-spacing: 0.2px;
     margin-top: 30px;
-    margin-left: 50px;
+    margin-left: 100px;
     text-align: center;
 }
 
