--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   --white-hero: rgba(255, 255, 255,0.857); 
   --orange: hsl(31, 84%, 50%);
   --dark-orange: hsl(31, 100%, 53%);
-  --grey: hsl(0, 0%, 47%);
+  --grey: #333;
   --ligth-grey: rgb(243, 235, 235);
 }
 
@@ -323,119 +323,164 @@
     font-size: 1.1rem;
     cursor: pointer;
     margin-bottom: 20px;
-  }
+  } 
 
-                              /* styling radio buttons */
-  label, input[type="radio"] {
-    line-height: 2.1ex;
-  }
-  
-  input[type="radio"] {
-      position: absolute;
-      left: -999em;
-  }
-  
-  input[type="radio"] + label {
-      position: relative;
-      overflow: hidden;
-      cursor: pointer;
-  }
-  
-  input[type="radio"] + label::before {
-    content: "";
-    display: inline-block;
-    vertical-align: -25%;
-    height: 2ex;
-    width: 2ex;
-    background-color: white;
-    border: 1px solid rgb(166, 166, 166);
-    border-radius: 4px;
-    box-shadow: inset 0 2px 5px rgba(0,0,0,0.25);
-    margin-right: 0.5em;
-  }
-  
-  input[type="radio"]:checked + label::before {
-    background: radial-gradient(circle at center, #01b42e .6ex, white .7ex);
-  }
-  
-  input[type="radio"] + label::before {
-    border-radius: 50%;
-  }
-
-                              /* styling checkboxs */
-/* The container */
-  .container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
+  /*------------------------------------------*/
+  .check {
+    border: 3px solid white;
+    border-radius: 5px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    margin-left: 20px;
   }
 
-  /* Hide the browser's default checkbox */
-  .container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-
-  /* Create a custom checkbox */
-  .semi-checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #01b42e !important;
-  }
-
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-  }
-
-  /* On mouse-over, add a grey background color */
-  .container:hover input ~ .checkmark {
-    background-color: #ccc;
-  }
-
-  /* When the checkbox is checked, add a blue background */
-  .container input:checked ~ .checkmark {
+  .checkedCheckbox {
+    width: 20px;
+    height: 20px;
     background-color: #01b42e;
+    align-self: center;
   }
 
-  /* Create the checkmark/indicator (hidden when not checked) */
-  .checkmark:after {
-    content: "";
+  .semiCheckedCheckbox {
+    width: 20px;
+    height: 20px;
+    background-color: #f78c00;
+    align-self: center;
+  }
+
+  form {
+    text-align: -webkit-center;
+  }
+
+  .checkPainel {
+    width: 36%;
+    justify-content: space-between;
+    font-size: large;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif !important;
+  }
+  
+  /********** DROPDOWN *********/
+  
+  .select {
+    height: 100%;
+    border-radius: 20px;
+    line-height: 30px;
+    color: #D8D8D8;
+  }
+  
+  input, textarea {
+    height: 50px;
+    width: 544px;
+    background-color: #272626;
+    padding: 0px 5px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    outline: none;
+    color: #D8D8D8;
+    border: .5px solid #2d2d2d;
+  }
+  
+  ::-webkit-input-placeholder{
+    color: #777777;
+  }
+  
+  input::-moz-placeholder {
+    color: #777777;
+  }
+  
+  .dropdown {
     position: absolute;
+    left: 32.2%;
+    text-align: left;
+    width: 35.5%;
+    background-color: #272626;
+    border-radius: 5px;
+    margin-top: 10px;
+    border: .5px solid #2d2d2d;
+    height: 90px;
+    overflow: auto;
     display: none;
+    transition: .5s;
+    transform: translate(0px, -10px);
   }
-
-  /* Show the checkmark when checked */
-  .container input:checked ~ .checkmark:after {
-    display: block;
-  }
-
-  /* Style the checkmark/indicator */
-  .container .checkmark:after {
-    left: 9px;
-    top: 5px;
+  
+  ::-webkit-scrollbar {
+    background-color: #1D1D1D;
     width: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #5B5B5B;
+    border-radius: 5px;
+  }
+  
+  .item {
+    height: 30px;
+    padding: 0px 5px;
+    box-sizing: border-box;
+    transition: .3s;
+    cursor: pointer;
+  }
+  
+  .item:hover {
+    background-color: #121212;
+    padding-left: 7px;
+    transition: .3s;
+  }
+  #msg {
+    height: 100px;
+  }
+  .radioButton {
+    width: 20px;
+    height: 20px;
+    border: 3px solid white;
+    border-radius: 100%;
+    cursor: pointer;
+    display: flex;
+    margin-left: 20px;
+  }
+  .flex {
+    display: flex;
+    align-items: center;
+  }
+  .flex p {
+    margin-left: 5px;
+    margin-right: 10px;
+  }
+  .inputform {
+    margin-top: 1%;
+  }
+  .pergunta {
+    line-height: 0;
+    margin-top: 2%;
+    font-size: 20px;
+  }
+  .enviar {
+    width: 33.5%;
+      margin: 20px;
+      padding: 20px;
+      border-radius: 10px;
+      font-size: 20px;
+      background: #272626;
+      color: #FFFFFF;
+      border: none;
+      cursor: pointer;
+      transition: 0.3 ease-in-out;
+  }
+  .enviar:hover {
+      font-weight: 900;
+      background-color: gray;
+  }
+  
+  .checkRadioButton {
+    width: 25px;
     height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+    border-radius: 100%;
+    background-color: #01b42e;
+    align-self: center;
+    margin: 2px;
   }
